--- a/src/styles/chat-window/chat-message.css
+++ b/src/styles/chat-window/chat-message.css
@@ -16,10 +16,9 @@
     border-radius: 8px;
 }
 
-
 .chat-message-sender {
     font-weight: 600;
-    color: red;
+    color: #ff0000;
 }
 
 .chat-message-avatar {
