--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,3 @@
 @import url(./global.css);
-@import url(./sidebar/sidebar.css);
-@import url(./chat-window/chat-index.css);
+@import url(./sidebar/index.css);
+@import url(./chat-window/index.css);
