--- a/src/styles/sidebar/aside.css
+++ b/src/styles/sidebar/aside.css
@@ -29,3 +29,9 @@
         display: none;
       }
 }
+
+@media only screen and (max-width: 800px) {
+    .aside {
+        display: none;
+      }
+}
